fixed issue of pages disappearing on mobile

--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -3,7 +3,6 @@ html, body {
     height: 100%;
     margin: 0;
     transform-style: preserve-3d;
-    overflow-x: hidden;
 }
 
 body {
